styles/style.css
body {
    display: flex;
    font-family: 'Montserrat', sans-serif;
    justify-content: center;
    /* font-size: 1.5em; */
}

.container {
    display: grid;
    width: 80vw;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    grid-template-areas: 
        "header"
        "subheading"
        "thumbnail"
        "main"
        "label"
        "input"
        "effect";
}

#header {
    display: flex;
    grid-area: header;
    text-align: center;
    justify-content: center;
    flex-direction: column;
}

#subheader {
    display: flex;
    grid-area: subheading;
    text-align: center;
    justify-content: center;
}

#thumb-bar img {
    width: 20%;
}

#thumb-bar {
    display: flex;
    grid-area: thumbnail;
    align-items: center;
}

#main-pic img {
    width: 100%;
}

#main-pic {
    display: flex;
    grid-area: main;
    margin-top: 5px;
}

#label {
    display: flex;
    grid-area: label;
    justify-content: center;
    align-items: flex-end;
    margin-top: 10px;
}

#input {
    display: flex;
    grid-area: input;
    justify-content: center;
}

#button {
    display: flex;
    grid-area: effect;
    justify-content: center;
}

@media screen and (min-width: 640px) {
    body {
        display: flex;
        justify-content: center;
        /* align-self: center; */
    }

    .container {
        width: 640px;
    }

    #header p {
        text-align: left;
    }

    .footer {
        display: flex;
        grid-area: label;
        justify-content: center;
        align-items: center;
    }

    #input {
        padding: 20px;
    }
}

